--- a/app/(app)/globals.css
+++ b/app/(app)/globals.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss';
-@import 'tw-animate-css';
+@import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -172,7 +172,10 @@
 }
 
 @utility mask-dots {
-  -webkit-mask-image: radial-gradient(rgba(63, 63, 70, 0.8) 10%, transparent 10%);
+  -webkit-mask-image: radial-gradient(
+    rgba(63, 63, 70, 0.8) 10%,
+    transparent 10%
+  );
   mask-image: radial-gradient(rgba(63, 63, 70, 0.8) 10%, transparent 10%);
   -webkit-mask-size: 8px 8px;
   mask-size: 8px 8px;
@@ -189,11 +192,28 @@
 }
 
 @utility fade-y {
-  -webkit-mask-image: linear-gradient(0deg, transparent 0%, white 20%, white 80%, transparent 100%);
-  mask-image: linear-gradient(0deg, transparent 0%, white 20%, white 80%, transparent 100%);
+  -webkit-mask-image: linear-gradient(
+    0deg,
+    transparent 0%,
+    white 20%,
+    white 80%,
+    transparent 100%
+  );
+  mask-image: linear-gradient(
+    0deg,
+    transparent 0%,
+    white 20%,
+    white 80%,
+    transparent 100%
+  );
 }
 
 @utility fade-x {
-  -webkit-mask-image: linear-gradient(90deg, transparent 0%, white, transparent 100%);
+  -webkit-mask-image: linear-gradient(
+    90deg,
+    transparent 0%,
+    white,
+    transparent 100%
+  );
   mask-image: linear-gradient(90deg, transparent 0%, white, transparent 100%);
 }
